- Addressed review comments from Sharad.

--- a/errors.html
+++ b/errors.html
@@ -112,7 +112,7 @@
 				if no output is returned), and throw an exception on error. Instead
 				of checking the return value for errors as in C, the caller should
 				use try-catch blocks for handling errors.</p>
-			<p>The OpenFAM 2.0 implementation defines a <code>Fam_Exception</code> class, which
+			<p>The OpenFAM implementation defines a <code>Fam_Exception</code> class, which
 				is derived from C++ standard exception class. It also defines a list of individual error
 				numbers to categorize various types of failures. Individual error numbers identify specific
 				error conditions. The <code>Fam_Exception</code> object received by the caller in case of an
