--- a/fam_fetch_or.html
+++ b/fam_fetch_or.html
@@ -105,7 +105,7 @@
 			
 	<h1 class="code">openfam::fam::fam_fetch_or</h1>
 	<p>Atomically replaces a value in FAM with the
-		Bitwise AND of that value and some given value, and returns the old
+		Bitwise OR of that value and some given value, and returns the old
 		value.</p>
 	<h2>Synopsis</h2>
 	<p class="code">uint32_t fam_fetch_or(Fam_Descriptor	*descriptor, uint64_t offset, uint32_t value);<br>
