--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -125,7 +125,7 @@
 			<tr><td class="code">&quot;VERSION&quot;</td>
 				<td>Version of the current implementation of the OpenFAM API.</td>
 				<td class="code">char*</td>
-				<td class="code">&quot;2.0&quot;</td>
+				<td class="code">&quot;3.0&quot;</td>
 			</tr>
 			<tr>
 				<td class="code">
@@ -316,7 +316,7 @@
 					&quot;IF_DEVICE&quot;
 				</td>
 				<td>
-					Device Name to be used for datapath operations with remote memory servers.
+					Device Name to be used for data path operations with remote memory servers.
 				</td>
 				<td class="code">
 					char*
