--- a/fam_quiet.html
+++ b/fam_quiet.html
@@ -132,7 +132,7 @@
 		for completion of <code>fam_map()</code>-enabled load/store accesses by the
 		processor to FAM.</p>
 	<p>For a given context, only one fam_quiet should be invoked at a time. 
-	   fam_quiet on same context should not be invoked parallelly from multiple threads.</p>
+	   fam_quiet on same context should not be invoked in parallel from multiple threads.</p>
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h&gt;
