--- a/release_notes.html
+++ b/release_notes.html
@@ -115,15 +115,16 @@
 			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <a href="fam_context_open.html"> fam_context_open API </a> for more details.</li>
 			<li>		OpenFAM APIs changes:
 		<ul>
-		<li>fam_create_region API has been modified wherein the input argument redundancyLevel is replaced with a structure that holds attributes for a region namely - redundancyLevel, memoryType and flags to indicate if data item interleaving needs to be enabled or not.</li>
-		<li>Two new APIs have been added to support multiple contexts namely <code>fam_context_open()</code> and <code>fam_context_close()</code>. These APIs provide the flexibility to threads to invoke datapath operations parallelly. </li>
-		<li>A new API <code>fam_progress</code> has been provided that returns the count of pending datapath and atomic operations.</li>
+		<li>fam_create_region API has been modified. Region specific attributes like redundancyLevel, etc should now be 
+specified using a structure called Fam_Region_Attributes.</li>
+		<li>Two new APIs have been added to support multiple contexts namely <code>fam_context_open()</code> and <code>fam_context_close()</code>. These APIs provide the flexibility to threads to invoke data path operations in parallel. </li>
+		<li>A new API <code>fam_progress</code> has been provided that returns the count of pending data path and atomic operations.</li>
 		<li>Few APIs have been added to enable backing up and restoring of data items namely - <code>fam_backup()</code> and <code>fam_restore()</code>. An API has been provided to delete the unused backup in the memory server.</li>
 		</ul>
 		</ul>
 		
 		<h2>OpenFAM version 2.0 (release v2.0.0)</h2>
-		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 1.0:</p>
+		<p>OpenFAM 2.0 contains the following changes and enhancements over version 1.0:</p>
 		<ul>
 		<li>Scalability improvements: This version supports a larger pool of memory by allowing multiple memory servers to be used. See <a href="services.html">services</a> for more details. </li>
 		<li>Performance improvements: Memory management and metadata operations have been optimized. 
