--- a/v3.0/config_files.html
+++ b/v3.0/config_files.html
@@ -60,7 +60,6 @@
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
 				<li><a href="fam_copy.html">fam_copy</a></li>
 				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
-				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
 				<li><a href="fam_backup.html">fam_backup</a></li>
 				<li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
 				<li><a href="fam_restore.html">fam_restore</a></li>
@@ -126,12 +125,12 @@ These configuration files contain the following options.
 	</tr>
 	<tr><td class="code">memsrv_list</td>
 		<td>List of memory servers. Applicable only if memsrv_interface_type is rpc. Each list entry is given
-		in this format:<p> &lt;memsrv_id>:&lt;host_address>:&lt;port_no>
+		in this format:<p> &lt;memsrv_id&gt;:&lt;host_address&gt;:&lt;port_no&gt;
 		</td>
 	</tr>
 	<tr><td class="code">metadata_list</td>
 		<td>List of metadata servers. Applicable only if metadata_interface_type is rpc. Each list entry is given
-		in this format:<p> &lt;metadataserver_id>:&lt;host_address>:&lt;port_no>
+		in this format:<p> &lt;metadataserver_id&gt;:&lt;host_address&gt;:&lt;port_no&gt;
 		</td>
 	</tr>
 </tbody>
@@ -254,16 +253,25 @@ These configuration files contain the following options.
 <p>Sample configuration files are provided in the source under <code>openfam_parent_directory/config</code>.</p>
 <h1>Starting Services</h1>
 <p> All the services and the PE read the respective configuration file from "config" directory placed at the path mentioned
-by <code>OPENFAM_ROOT</code> environment variable or <code>By default, OPENFAM_ROOT will be /opt/hpe/OpenFAM</code>. User needs to update this environment variable to select config folder created by them</p>
-<p> A tool by name openfam_adm has been introduced which helps to perform the basic tasks useful to an OpenFAM user such as creating configuraion files, starting OpenFAM services, terminating OpenFAM services,  running tests and cleanup FAM and metadata.
-To access the tool, the openfam module must be loaded. That can be done using following command:
+by <code>OPENFAM_ROOT</code> environment variable.</p>
+<p> Or by default, <code>OPENFAM_ROOT</code> will be <code>/opt/hpe/OpenFAM</code>.</p>
+<p> User needs to update this environment variable to select config folder created by them.</p>
+<p> A tool by name <code>openfam_adm</code> has been introduced which helps to perform the basic tasks useful to an OpenFAM user such as </p>
+<ol>
+<li>creating configuration files, </li>
+<li>starting OpenFAM services, </li>
+<li>terminating OpenFAM services,</li>
+<li>running tests and </li>
+<li>cleanup FAM and metadata. </li>
+</ol>
+<p>To access the tool, the openfam module must be loaded. That can be done using following command: </p>
 
-module load openfam
+<code>module load openfam</code>
 
-The detailed description and available options are given below.
-The details of available command line options can be found using <code>-h</code> option of each of the service executable.
+<p>The detailed description and available options are given below.</p>
+<p>The details of available command line options can be found using <code>-h</code> option of each of the service executable.
 For Example:</p>
-<pre>#openfam_adm -h
+<pre>#<text style="background-color:LightGrey;">openfam_adm -h</text>
 Usage :
        openfam_adm [-h] [--create_config_files] [--start_service]
                                     [--stop_service] [--clean] [--install_path]
@@ -323,11 +331,11 @@ Options :
                                launcher_options: "-N" "1" "--mpi=pmix"
          --model               OpenFAM model(memory_server/shared_memory)
          --thrdmodel           Thread model(single/multiple)
-         --provider            Libfabric provider to be used for datapath operations
+         --provider            Libfabric provider to be used for data path operations
          --runtime             Runtime process management interface(PMI) to be used
          --kvstype             Type of key value store to be used for metadata
                                management
-         --libfabricport       Libafabric port for datapath operation
+         --libfabricport       Libafabric port for data path operation
          --metapath            path to store metadata
          --fampath             path where data is stored
          --fam_backup_path     path where data backup is stored(on shared filesystem)
