--- a/v3.0/fam_deallocate.html
+++ b/v3.0/fam_deallocate.html
@@ -137,7 +137,7 @@
 	<p>Note that if a descriptor is used to access deallocated space,
 		behavior of the library is implementation dependent. The
 		implementation may reclaim space some indeterminate amount of time
-		after the method is called, to perform memset operation to zero deallocated memory space.</p>
+		after the method is called, to perform a memset operation to zero deallocated memory space.</p>
 	<h2>Example</h2>
 	<p>See <a href="fam_allocate.html#e1">fam_allocate</a></p>
 		</article>
