--- a/v3.0/fam_destroy_region.html
+++ b/v3.0/fam_destroy_region.html
@@ -137,7 +137,7 @@
 		destroyed. If descriptors to the region or the contained data items
 		are subsequently used, the behavior of the library is implementation
 		dependent. Note that this call will trigger a delayed free operation,
-		 to perform memset operation to zero deallocated memory space from this region.</p>
+		 to perform a memset operation to zero deallocated memory space from this region.</p>
 	<h2>Example</h2>
 	<p>See <a href="fam_create_region.html#e1">fam_create_region</a></p>
 		</article>
