--- a/v3.0/fam_fetch_xor.html
+++ b/v3.0/fam_fetch_xor.html
@@ -60,6 +60,12 @@
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
 				<li><a href="fam_copy.html">fam_copy</a></li>
 				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
+                                <li><a href="fam_backup.html">fam_backup</a></li>
+                                <li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
+                                <li><a href="fam_restore.html">fam_restore</a></li>
+                                <li><a href="fam_restore_wait.html">fam_restore_wait</a></li>
+                                <li><a href="fam_delete_backup.html">fam_delete_backup</a></li>
+                                <li><a href="fam_delete_backup_wait.html">fam_delete_backup_wait</a></li>
 			</ul>
 			<hr>
 			Atomics
@@ -89,13 +95,16 @@
 				<li><a href="fam_barrier_all.html">fam_barrier_all</a></li>
 				<li><a href="fam_fence.html">fam_fence</a></li>
 				<li><a href="fam_quiet.html">fam_quiet</a></li>
+                                <li><a href="fam_progress.html">fam_progress</a></li>
+                                <li><a href="fam_context_open.html">fam_context_open</a></li>
+                                <li><a href="fam_context_close.html">fam_context_close</a></li>
 			</ul>
 			<hr>
 		</nav>
 		<article>
 <h1 class="code">openfam::fam::fam_fetch_xor</h1>
 	<p>Atomically replaces a value in FAM with the
-		Bitwise AND of that value and some given value, and returns the old
+		Bitwise XOR of that value and some given value, and returns the old
 		value.</p>
 	<h2>Synopsis</h2>
 	<p class="code">uint32_t fam_fetch_xor(Fam_Descriptor *descriptor, uint64_t offset, uint32_t value);<br>
