FAM_THREAD_MODEL is supported in v3.0. Hence removed from unsupported list.

--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -330,7 +330,7 @@
 	<p>&nbsp;</p>
 	<p>Note: The following options are not supported in current
 		implementation and should not be used, even though they have default values.
-		<code>&quot;DEFAULT_REGION_NAME&quot;</code>, <code>&quot;FAM_THREAD_MODEL&quot;</code> and <code>&quot;FAM_CONTEXT_MODEL&quot;</code></p>
+		<code>&quot;DEFAULT_REGION_NAME&quot;</code> and <code>&quot;FAM_CONTEXT_MODEL&quot;</code></p>
 	<h2>Return Values</h2>
 	<p>A pointer to the value of the option. Throws <code>Fam_Exception</code> on
 		error.</p>
