--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@ OpenFAM version 3.0 contains significant design changes to increase scalability 
 <li>Data can be interleaved as data items can now span across multiple memory servers, thus reducing performance bottlenecks.</li>
 <li>Datapath operations can now be partitioned into multiple contexts.</li>
 <li>Multi-threaded data path and atomic operations are supported.</li>
-<li>Additional APIs have been addeded to the facilitate data movement between memory pool and archival storage.</li>
+<li>Additional APIs have been added to the facilitate data movement between memory pool and archival storage.</li>
 </ul>
 <figure>
 <img src="images/openfam2.0memoryserver.png" width="450px">
