--- a/v3.0/config_files.html
+++ b/v3.0/config_files.html
@@ -207,7 +207,7 @@ These configuration files contain the following options.
 		</td>
 	</tr>
 	<tr><td class="code">metadata_path</td>
-		<td> Absoulte path where metadata info is stored. By default, it will be placed in /dev/shm/&lt;metadata_manager>.
+		<td> Absolute path where metadata info is stored. By default, it will be placed in /dev/shm/&lt;metadata_manager>.
 		Example: If metadata manager is radixtree, then metadata info would be placed under /dev/shm/radixtree folder.
 		</td>
 	</tr>
