--- a/release_notes.html
+++ b/release_notes.html
@@ -110,16 +110,17 @@
 		<p>The current version of OpenFAM is 3.1. It contains the following changes and enhancements over version 3.0:</p>
 		<ul>
 			<li>Added thallium as an alternate RPC framework for control path operations. Thallium can be used as RPC framework by     passing --rpc_framework=thallium to openfam_adm script (or in the arg file). To fall back to grpc, --rpc_framework=grpc can be used by application developers. The default option is grpc.</li>
-			<li>Improvements to memory registrations: OpenFAM 3.0 registered each data item separately with libfabric, leading to excessive memory registrations as the number of data items increases. As a result, scalability suffered because the underlying memory registration caches become inefficient. Introduced an alternative approach to register entire region in place of registering data items, thereby reducing the number of memory registrations needed.</li>
+			<li>Improvements to memory registrations: OpenFAM 3.0 registered each data item separately with libfabric, leading to excessive memory registrations as the number of data items increases. As a result, scalability suffers because the underlying memory registration caches become inefficient. Introduced an alternative approach to register entire region in place of registering data items, thereby reducing the number of memory registrations needed.</li>
 			<li>Small I/O Performance improvements:
-			-	OpenFAM 3.0 used standard keys (non-optimized keys), impacting the performance for small I/O’s. Modified OpenFAM to use optimized keys.
-			-	Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PE’s. 
-			-	Added support for hybrid MR, applications can use it through new fam_options field. Hybrid MR improves the performance of multi-threaded applications or when large number of local buffers are used for FAM operations
-
+			<ul>
+			<li>OpenFAM 3.0 used standard keys (non-optimized keys), impacting the performance for small I/O’s. Modified OpenFAM to use optimized keys.</li>
+			<li>Added support for huge pages, using which application can improve performance of random scatter/gather from multiple PEs. </li>
+			<li>Added support for hybrid MR, applications can use it through new fam_options field. Hybrid MR improves the performance of multi-threaded applications or when large number of local buffers are used for FAM operations. </li>
+                       </ul>
 			<li>		OpenFAM APIs changes:
 		<ul>
 		<li><code>fam_create_region</code> API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes.</li>
-		<li> A new API by name <code>fam_close</code>  has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally use this reference count for optimal usage of resources. This API helps to release unused resources back to the system. </li>
+		<li> A new API by name <code>fam_close</code>  has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <a href="fam_close.html">/fam_close</a> API for more details. </li>
 		</ul>
 		</ul>
 		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
@@ -129,7 +130,7 @@
 			<li>Multi-threaded support has been added that enables OpenFAM to be used with multi-threaded applications. See <a href="multithread.html">multi-threaded environment</a> for more details.</li>
 			<li>Performance improvements:
 				Data item interleaving feature has been added in which a given data item will span across multiple memory servers. This has been done to uniformly distribute the load across multiple memory servers, thus reducing the network bottlenecks, and thereby improving the overall performance. Data item interleaving is enabled by default. See  <a href="interleaving.html">Data Item Interleaving </a> for more details.</li>
-			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <a href="fam_context_open.html"> fam_context_open API </a> for more details.</li>
+			<li> Added support for multiple contexts. The data path APIs (get,put, scatter, gather and atomics) can be invoked from user defined contexts. See <a href="fam_context_open.html"> fam_context_open </a> API for more details.</li>
 			<li>		OpenFAM APIs changes:
 		<ul>
 		<li>fam_create_region API has been modified. Region specific attributes like redundancyLevel, etc should now be 
