Minor edits and/or corrections.

--- a/config_files.html
+++ b/config_files.html
@@ -242,10 +242,10 @@ These configuration files contain the following options.
 		</td>
 	</tr>
 	<tr><td class="code">dataitem_interleave_size</td>
-		<td>  Data interleaving refers to interspersing portions of the data across the memory servers in some specified order or other arrangement. dataitem_interleave_size decides the number of bytes after which data item needs to be striped so that it gets distributed across several memory servers. Default value is "1048576".</td>
+		<td>  Data interleaving refers to interspersing portions of the data across the memory servers in a specified order or other arrangement. dataitem_interleave_size decides the number of bytes after which data item needs to be striped so that it gets distributed across several memory servers. Default value is "1048576".</td>
 	</tr>
 	<tr><td class="code">rpc_framework_type</td>
-		<td> The control path operations can leverage thallium libraries instead of grpc. Default value is "grpc". other option is "thallium".
+		<td> The control path operations can leverage thallium libraries instead of grpc. Default value is "grpc". Other option is "thallium".
 		</td>
 	</tr>
 	<tr><td class="code">provider</td>
@@ -281,7 +281,7 @@ These configuration files contain the following options.
 		</td>
 	</tr>
 	<tr><td class="code">rpc_framework_type</td>
-		<td> The control path operations can also leverage thallium libraries instead of grpc. Default value is "grpc". other option is "thallium".
+		<td> The control path operations can also leverage thallium libraries instead of grpc. Default value is "grpc". Other option is "thallium".
 		</td>
 	</tr>
 	<tr><td class="code">openfam_model</td>
