--- a/v3.1/fam_initialize.html
+++ b/v3.1/fam_initialize.html
@@ -242,7 +242,7 @@ typedef struct {
 					Local buffer address to be registered via client for better performance.	
 				</td>
 				<td>
-					NA
+					No default value available.
 				</td>
 			</tr>
 			<tr>
@@ -253,7 +253,7 @@ typedef struct {
 					Local buffer size is the size of local buffer to be registered via client.	
 				</td>
 				<td>
-				        NA					</td>
+				        No default value available.					</td>
 			</tr>
 		</tbody>
 	</table>
